Bug fix. Add overflow-scrolling property to twitter container.

--- a/assets/less/module/twitter-list.less
+++ b/assets/less/module/twitter-list.less
@@ -14,7 +14,8 @@
     }
 
     .twitter-content {
-        height: 15.625em;
+        height: 20em;
+        overflow-scrolling: touch;
         overflow-y: auto;
         border-top: 0.188em solid @black;
         border-bottom: 0.063em solid @black;
